<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loginRelativeLayout">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="607dp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/loginEditTextLoginActivity"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:hint="@string/login"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditTextLoginActivity"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/loginEditTextLoginActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditTextLoginActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/oval_button"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />


</RelativeLayout>