<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyParametersActivity">

    <RelativeLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/backToPreviousActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/oval_button"
            android:text="Back"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nutritions_target_string"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveNewParameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/oval_button"
            android:text="Save"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainNutritionsTargetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBarLayout"
        android:layout_marginTop="25dp">

        <RelativeLayout
            android:id="@+id/energyValueTargetLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/energyValueTargetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/product_energy_value"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/energyValueTargetValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="75dp"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="19dp"
                android:text="@string/string_kcal"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/carboTargetLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/energyValueTargetLayout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/carboTargetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/product_carbohydrates"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/carboTargetEditView"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="75dp"
                android:inputType="numberDecimal"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="50dp"
                android:text="@string/string_gram_mass_unit"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/proteinsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/carboTargetLayout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/proteinsTargetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/product_proteins"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/proteinsTargetEditText"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="75dp"
                android:inputType="numberDecimal"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="50dp"
                android:text="@string/string_gram_mass_unit"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fatsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/proteinsLayout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fatsTargetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/product_fats"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/fatsTargetEditText"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="75dp"
                android:inputType="numberDecimal"
                android:textSize="22dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="50dp"
                android:text="@string/string_gram_mass_unit"
                android:textSize="25dp" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>